# job_scheduler

./: .coverage  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  nodeids  pyproject.toml
alembic/: env.py
alembic/versions/: 0a7f70019fca_add_retry_policies_queues.py  a2b3c4d5e6f7_add_scheduled_jobs.py  d423187148d7_add_organizations_users_projects.py  e37e4f2e712f_add_jobs_executions_logs.py  f1b2c3d4e5f6_add_workers.py
app/: config.py  db.py  main.py
app/api/: auth.py  health.py  jobs.py  metrics.py  projects.py  queues.py  workers.py
app/core/: deps.py  errors.py  logging.py  response.py  security.py
app/models/: __init__.py  auth.py  job.py  queue.py  scheduled_job.py  worker.py
app/scheduler/: reaper.py  scheduler.py
app/schemas/: auth.py  job.py  queue.py
app/worker/: __main__.py  backoff.py  claimer.py  executor.py  heartbeat.py  pool.py  retry.py
distributed_job_scheduler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: 00-overview.md  01-architecture.md  02-database-design.md  03-concurrency-and-reliability.md  04-api-design.md  05-frontend.md  06-design-decisions.md  07-tech-stack.md  08-implementation-plan.md  09-git-workflow.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  index.ts
frontend/src/lib/: auth.ts
tests/: conftest.py  test_auth.py  test_health.py  test_heartbeat_reaper.py  test_jobs.py  test_metrics.py  test_queues.py  test_retries.py  test_scheduling.py  test_worker.py
(+18 files in other folders)
